--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -170,6 +170,48 @@
           <context context-type="sourcefile">src/app/thermometre/thermometre.ts</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="ranking.1" datatype="html">
+        <source>Favorite</source>
+        <target>Favori</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/ranking-label/ranking-label.html</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="ranking.2" datatype="html">
+        <source>Love</source>
+        <target>Aime</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/ranking-label/ranking-label.html</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="ranking.3" datatype="html">
+        <source>Accepted</source>
+        <target>Acceptable</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/ranking-label/ranking-label.html</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="ranking.4" datatype="html">
+        <source>Rarely</source>
+        <target>Rarement</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/ranking-label/ranking-label.html</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="ranking.5" datatype="html">
+        <source>Never</source>
+        <target>Jamais</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/ranking-label/ranking-label.html</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="ranking.unknown" datatype="html">
+        <source>Unknown Ranking</source>
+        <target>Rang inconnue</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/ranking-label/ranking-label.html</context>
+        </context-group>
+      </trans-unit>
     </body>
   </file>
 </xliff>
