--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -170,6 +170,13 @@
           <context context-type="sourcefile">src/app/thermometre/thermometre.ts</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="ranking.0" datatype="html">
+        <source>Choices</source>
+        <target>Choix</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/ranking-label/ranking-label.html</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="ranking.1" datatype="html">
         <source>Favorite</source>
         <target>Favori</target>
@@ -211,6 +218,42 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/ranking-label/ranking-label.html</context>
         </context-group>
+      </trans-unit>
+      <trans-unit id="contrat.title" datatype="html">
+        <source>Step 2: Preferences</source>
+        <target>Étape 2 : Préférences</target>
+      </trans-unit>
+      <trans-unit id="contrat.subtitle" datatype="html">
+        <source>Drag and drop the choices into the categories that best fit your preferences.</source>
+        <target>Glissez-déposez les choix dans les catégories qui correspondent le mieux à vos préférences.</target>
+      </trans-unit>
+      <trans-unit id="contrat.hint" datatype="html">
+        <source>Drag items from Choices to the categories. Drop zones highlight when dragging.</source>
+        <target>Faites glisser les éléments de Choix vers les catégories. Les zones de dépôt se mettent en surbrillance lors du glissement.</target>
+      </trans-unit>
+      <trans-unit id="contrat.choices.placeholder" datatype="html">
+        <source>Return unwanted choices here</source>
+        <target>Retournez les choix indésirables ici</target>
+      </trans-unit>
+      <trans-unit id="contrat.favorite.placeholder" datatype="html">
+        <source>Drop a limited number of favorite items here</source>
+        <target>Déposez un nombre limité d'éléments favoris ici</target>
+      </trans-unit>
+      <trans-unit id="contrat.love.placeholder" datatype="html">
+        <source>Drop what you love here</source>
+        <target>Déposez ce que vous aimez ici</target>
+      </trans-unit>
+      <trans-unit id="contrat.like.placeholder" datatype="html">
+        <source>Drop like items here</source>
+        <target>Déposez les éléments aimés ici</target>
+      </trans-unit>
+      <trans-unit id="contrat.rarely.placeholder" datatype="html">
+        <source>Drop what can be done but rarely here</source>
+        <target>Déposez ce qui peut être fait mais rarement ici</target>
+      </trans-unit>
+      <trans-unit id="contrat.never.placeholder" datatype="html">
+        <source>Drop thing you never want here</source>
+        <target>Déposez les choses que vous ne voulez jamais ici</target>
       </trans-unit>
     </body>
   </file>
