Ajouter page login et signup

--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -41,6 +41,36 @@
       <trans-unit id="start_now" datatype="html">
         <source>Start now</source>
       </trans-unit>
+      <trans-unit id="login" datatype="html">
+        <source>Login</source>
+      </trans-unit>
+      <trans-unit id="loginTitle" datatype="html">
+        <source>Login</source>
+      </trans-unit>
+      <trans-unit id="username" datatype="html">
+        <source>Username</source>
+      </trans-unit>
+      <trans-unit id="password" datatype="html">
+        <source>Password</source>
+      </trans-unit>
+      <trans-unit id="createAccount" datatype="html">
+        <source>Create an account</source>
+      </trans-unit>
+      <trans-unit id="createAccountTitle" datatype="html">
+        <source>Create account</source>
+      </trans-unit>
+      <trans-unit id="confirmPassword" datatype="html">
+        <source>Confirm password</source>
+      </trans-unit>
+      <trans-unit id="passwordStrengthHint" datatype="html">
+        <source>Use at least 8 characters including uppercase, lowercase, numbers and symbols to make a stronger password.</source>
+      </trans-unit>
+      <trans-unit id="signIn" datatype="html">
+        <source>Sign in</source>
+      </trans-unit>
+      <trans-unit id="create" datatype="html">
+        <source>Create</source>
+      </trans-unit>
       <trans-unit id="thermometre.title" datatype="html">
         <source>Step 1 : Temperature</source>
       </trans-unit>
