--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -107,6 +107,13 @@
           <context context-type="sourcefile">src/app/login/login.html</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="email" datatype="html">
+        <source>Email</source>
+        <target>Courriel</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/create-account/create-account.html</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="username" datatype="html">
         <source>Username</source>
         <target>Nom d'utilisateur</target>
