Ajout message d'erreur lorsque le courriel n'est pas valide

--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -77,6 +77,9 @@
       <trans-unit id="cancel" datatype="html">
         <source>Cancel</source>
       </trans-unit>
+      <trans-unit id="invalidEmail" datatype="html">
+        <source>Invalid email address</source>
+      </trans-unit>
       <trans-unit id="thermometre.title" datatype="html">
         <source>Step 1 : Temperature</source>
       </trans-unit>
