--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -77,6 +77,9 @@
       <trans-unit id="cancel" datatype="html">
         <source>Cancel</source>
       </trans-unit>
+      <trans-unit id="signInWithGoogle" datatype="html">
+        <source>Sign in with Google</source>
+      </trans-unit>
       <trans-unit id="invalidEmail" datatype="html">
         <source>Invalid email address</source>
       </trans-unit>
