--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -184,6 +184,13 @@
           <context context-type="sourcefile">src/app/login/login.html</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="signOut" datatype="html">
+        <source>Sign out</source>
+        <target>Se déconnecter</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/app.html</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="invalidEmail" datatype="html">
         <source>Invalid email address</source>
         <target>Adresse e-mail invalide</target>
